<resources>
    <string name="app_name">Tugas_pakRian__1</string>
    <string name="title">My Applican</string>
    <string name="username">Velerio Antoni </string>
    <string name="exit">Keluar</string>
    <string name="bio">Belajar di kelas 12 RPL 1. Berikut link tentang saya dan link kontak media sosial saya</string>
    <string name="section1">Target Project untuk semester ini:</string>
    <string name="item1">Project 1 : Project Pertama saya adalah Kalkulator</string>
    <string name="item2">Project 2 : Project Kedua saya adalah Notes</string>
    <string name="item3">Project 3 : Project Ketiga saya adalah OurBook</string>
    <string name="item4">Project 4 : Pembuatan aplikasi mobile dengan teknik desain aplikasi lanjutan</string>
    <string name="item5">Project 5 : Pembuatan aplikasi mobile dengan menerapkan basis data SQL lite</string>
    <string name="copyright">Pemgrograman Perangkat Bergerak - Semester - SMKN 24 Jakarta@2025</string>
    <string name="nama">Nama :Valerio Antoni</string>
    <string name="kelas">Kelas :XII</string>
    <string name="absen">Absen :35</string>
    <string name="tglpembuatan">Tanggal Pembuatan: 15 Februari 2025</string>
    <string name="version">Version Control: 1.0</string>
</resources>
