<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <Button
            android:id="@+id/btnExit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="EXIT"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="16dp"/>



        <TextView
            android:id="@+id/notesHeading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/poppins"
            android:text="Notes."
            android:layout_marginStart="18dp"
            android:textColor="@color/blue"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/txtNama"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/notesHeading"
            android:layout_marginTop="12dp"
            android:layout_marginStart="18dp"
            android:text="@string/nama"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:fontFamily="@font/poppins" />

        <TextView
            android:id="@+id/txtKelas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtNama"
            android:layout_marginTop="4dp"
            android:layout_marginStart="18dp"
            android:text="@string/kelas"
            android:textSize="18sp"
            android:textColor="@android:color/white"
            android:fontFamily="@font/poppins"
            android:background="@android:color/holo_red_light" />

        <TextView
            android:id="@+id/txtAbsen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtKelas"
            android:layout_marginTop="4dp"
            android:layout_marginStart="18dp"
            android:text="@string/absen"
            android:textSize="18sp"
            android:textColor="@android:color/white"
            android:fontFamily="@font/poppins"
            android:background="@android:color/black" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/notesRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtAbsen"
            android:layout_marginTop="20dp"
            android:padding="16dp"
            android:nestedScrollingEnabled="false"/>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/addButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:src="@drawable/baseline_add_24"
            app:tint="@color/white"
            android:backgroundTint="@color/blue"/>
    </RelativeLayout>

</ScrollView>
