<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="270dp"
        android:layout_marginBottom="448dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/smkrubuh" />


    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="32dp"
        app:cardCornerRadius="100dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
        app:layout_constraintStart_toStartOf="@+id/imageView2"
        app:layout_constraintTop_toBottomOf="@+id/imageView2">

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:srcCompat="@drawable/pp" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/title"
        android:textColor="@android:color/holo_orange_light"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/cardView"
        app:layout_constraintStart_toEndOf="@+id/cardView"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/username"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/cardView"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/exitbtn"
        android:layout_width="113dp"
        android:layout_height="38dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="@android:color/holo_orange_light"
        android:text="@string/exit"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="@+id/imageView2"
        app:layout_constraintTop_toTopOf="@+id/textView"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="TouchTargetSizeCheck" />


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="393dp"
        android:layout_height="120dp"
        android:layout_marginTop="80dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@+id/imageView2"
        app:layout_constraintStart_toStartOf="@+id/imageView2"
        app:layout_constraintTop_toBottomOf="@+id/imageView2">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="186dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:paddingStart="16dp"
            android:text="@string/bio" />

        <HorizontalScrollView
            android:layout_width="196dp"
            android:layout_height="match_parent"
            android:fillViewport="true"
            android:layout_marginEnd="16dp"
            tools:ignore="SpeakableTextPresentCheck">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/abut"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:layout_marginEnd="2dp"
                    android:src="@drawable/rendang" />

                <ImageView
                    android:id="@+id/imageView10"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:layout_marginEnd="2dp"
                    android:src="@drawable/nasigoreng" />

                <ImageView
                    android:id="@+id/imageView11"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:layout_marginEnd="2dp"
                    android:src="@drawable/sate" />

                <ImageView
                    android:id="@+id/imageView12"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:layout_marginEnd="2dp"
                    android:src="@drawable/padang" />

                <ImageView
                    android:id="@+id/imageView13"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:layout_marginEnd="2dp"
                    android:src="@drawable/warteg" />
            </LinearLayout>
        </HorizontalScrollView>

    </LinearLayout>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:paddingStart="16dp"
        android:text="@string/section1"
        android:textSize="20sp"
        android:textColor="@android:color/holo_blue_dark"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/linearLayout"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="84dp"
        android:fillViewport="true"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout"
        app:layout_constraintStart_toStartOf="@+id/linearLayout"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="190dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="goToCalculator"
                android:orientation="horizontal"
                android:padding="8dp">


                <ImageView
                    android:id="@+id/imageView14"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:src="@drawable/kalkulator" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:paddingStart="8dp"
                    android:text="@string/item1"
                    android:textSize="15sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:onClick="goToNotes"
                android:padding="8dp">

                <ImageView
                    android:id="@+id/imageView15"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:src="@drawable/note" />

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:paddingStart="8dp"
                    android:text="@string/item2"
                    android:textSize="15sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="8dp">

                <ImageView
                    android:id="@+id/imageView16"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:src="@drawable/info3" />

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:paddingStart="8dp"
                    android:text="@string/item1"
                    android:textSize="15sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="8dp">

                <ImageView
                    android:id="@+id/imageView17"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:src="@drawable/info4" />

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:paddingStart="8dp"
                    android:text="@string/item1"
                    android:textSize="15sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="8dp">

                <ImageView
                    android:id="@+id/imageView18"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:src="@drawable/info5" />

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:paddingStart="8dp"
                    android:text="@string/item1"
                    android:textSize="15sp" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>


    <TextView
        android:id="@+id/textView11"
        android:layout_width="265dp"
        android:layout_height="40dp"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:text="@string/copyright"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/scrollView2"
        app:layout_constraintTop_toBottomOf="@+id/scrollView2" />

</androidx.constraintlayout.widget.ConstraintLayout>